Tweak select box to prevent text spillover
[#44741681]

--- a/src/sass/lab/_jquery-ui-lab-theme.sass
+++ b/src/sass/lab/_jquery-ui-lab-theme.sass
@@ -51,7 +51,7 @@
   line-height: 2em
 
 .selectboxit-text
-  text-indent: 0.6em
+  text-indent: 0.5em
   overflow: visible
 
 .selectboxit-option, .selectboxit-optgroup-header
